# snufkin

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/SPTLib/: CMakeLists.txt  Hooks.cpp  IHookableDirFilter.cpp  IHookableModule.cpp  IHookableNameFilter.cpp  IHookableNameFilterOrdered.cpp  MemUtils.cpp  PatternCacher.cpp  PatternSearcher.cpp  feature.cpp  sptlib.cpp
lib/SPTLib/Windows/: DetoursUtils.cpp  Hooks_win.cpp  MemUtils_win.cpp
lib/SPTLib/Windows/minhook/src/: hook.c
lib/SPTLib/include/SPTLib/: DetoursUtils.hpp  Hooks.hpp  IHookableDirFilter.hpp  IHookableModule.hpp  IHookableNameFilter.hpp  IHookableNameFilterOrdered.hpp  MemUtils.hpp  PatternCacher.hpp  PatternSearcher.hpp  feature.hpp  patterns.hpp  sptlib.hpp
lib/Signal/: CMakeLists.txt
lib/curl/: CMakeLists.txt
lib/dx9/: CMakeLists.txt
lib/googletest/: CMakeLists.txt
lib/lua/: CMakeLists.txt
lib/lua/src/: lauxlib.h  liolib.c  loadlib.c  lua.h
lib/nlohmann/: CMakeLists.txt
lib/sdemo/: CMakeLists.txt  parser.cpp  parser.h  version_utils.cpp
lib/sdemo/include/sdemo/: ostream_helpers.h  sdemo.h  utils.h
lib/ssdk/: CMakeLists.txt  cvar.cpp  dbg.cpp  mathlib_base.cpp  strtools.cpp  utlbuffer.cpp  utlstring.cpp
lib/ssdk/include/: Color.h  cdll_int.h  datamap.h  edict.h  eiface.h  filesystem.h  icliententitylist.h  icvar.h  studio.h  view_shared.h
lib/ssdk/include/SDK/: igamemovement.h  imovehelper.h
lib/ssdk/include/appframework/: IAppSystem.h
lib/ssdk/include/engine/: iserverplugin.h  ivmodelrender.h
lib/ssdk/include/mathlib/: math_pfns.h  mathlib.h  mathlib_.h  vector.h  vector2d.h
lib/ssdk/include/tier0/: basetypes.h  dbg.h  memalloc.h  platform.h  threadtools.h  vprof.h
lib/ssdk/include/tier1/: characterset.h  convar.h  iconvar.h  interface.h  refcount.h  utlblockmemory.h  utlbuffer.h  utlmemory.h  utlstring.h  utlvector.h
lib/ssdk/include/vstdlib/: random.h
lib/utilslib/: CMakeLists.txt  datamap_wrapper.cpp  game_detection.cpp  interfaces.cpp  lua.cpp  math.cpp  signals.cpp
lib/utilslib/include/utils/: datamap_wrapper.hpp  ivp_maths.hpp  lua.hpp  math.hpp
src/: CMakeLists.txt  game_detection.cpp  game_detection.hpp  interfaces.cpp  interfaces.hpp  plugin.cpp  plugin.h  signals.cpp  signals.hpp
src/features/: autojump.cpp  autojump.hpp  bigcheattext.cpp  dx9.cpp  ent_props.cpp  ent_props.hpp  input.cpp  lua.cpp  overlay.cpp  portal_utils.cpp  portal_utils.hpp  portalcolors.cpp  portalcolors.hpp  shadow.cpp  shadow.hpp  speedrun_demorecord.cpp  template.cpp.txt  updater.cpp
test/sdemo_tests/: CMakeLists.txt
test/sptlib_tests/: CMakeLists.txt  main_tests.cpp
test/utilslib_tests/: CMakeLists.txt  lua_tests.cpp
tools/: CMakeLists.txt  luatest.cpp
tools/demo/: sdemodump.cpp  slistdemo.cpp
